[package]
name = "zuul"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/TristanCacqueray/zuul-rs"
documentation = "https://docs.rs/zuul/"
authors = ["TristanCacqueray"]
readme = "README.md"

description = "A client library to interface with https://zuul-ci.org."

keywords = ["iterator", "zuul"]
categories = ["client"]

edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "gzip"] }
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
clap = "^2"
env_logger = "0.9"
httpmock = "0.6"

[[example]]
name = "zuul-build"
path = "examples/zuul-build.rs"
